@@ -2,7 +2,7 @@ gnubiff -- History of visible changes.
 
 Copyright (C) 2000-2005, Nicolas Rougier <Nicolas.Rougier@loria.fr>
 See the end for copying conditions.
-Please send gnubiff bug reports to Nicolas.Rougier@loria.fr.
+Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net
 
 Version 2.1.1
 Major bugfix release. Many thanks to Byron Foster and Calum Mackay for their
